Global: Fixed broken layout after moving tau.js
After moving the tau.js to body bottom the layout
became broken (missing colors, fonts etc)

Fixed by changing the css definition to shorter
and removing all ui-bar-s and ui-body-s occurences
in styles

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.textinput.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.textinput.less
@@ -141,7 +141,7 @@ textarea.ui-input-text.ui-focus {
 	}
 }
 
-.ui-header.ui-bar-s.ui-header-searchbar {
+.ui-header.ui-header-searchbar {
 	.ui-title {
 		max-width: none;
 		float: none;
@@ -211,8 +211,8 @@ textarea.ui-input-text.ui-focus {
 }
 
 /* search bar */
-.ui-body-s > div > .ui-field-contain > .input-search-bar,
-.ui-body-s > .ui-field-contain > .input-search-bar {
+.ui-page > div > .ui-field-contain > .input-search-bar,
+.ui-page > .ui-field-contain > .input-search-bar {
 	margin: -48*@unit_base -15*@unit_base -32*@unit_base -15*@unit_base;
 }
 
