--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.theme.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.theme.less
@@ -5,7 +5,7 @@
 @footer_btn_margin: 15 * @unit_base;
 @footer_btn_middle_margin: 6 * @unit_base;
 
-.ui-bar-s {
+.ui-header {
 	border: none;
 	background : @color_bar_naviframe_bg; /* Header Background */
 	color: @color_bar_title_text;
@@ -32,7 +32,7 @@
 }
 
 /* Header style */
-.ui-header.ui-bar-s{
+.ui-header {
 	position : fixed;
 	top : 0;
 
@@ -216,7 +216,7 @@
 	}
 }
 
-.ui-footer.ui-bar-s {
+.ui-footer {
 	height : 108 * @unit_base;
 	text-align : center;
 	bottom : 0;
@@ -306,7 +306,7 @@
 ***************************************************************************/
 
 
-.ui-body-s {
+.ui-page {
 	border-top: none;
 	background: @color_bg;
 	color: @color_text;
