--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.drawer.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.drawer.less
@@ -51,7 +51,7 @@
 	z-index : 1200;
 }
 
-.ui-header.ui-bar-s {
+.ui-header {
 	&.ui-drawer-header {
 		.ui-btn.ui-drawer-button.ui-btn-icon_only {
 			position: absolute;
