--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tabbar.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tabbar.less
@@ -2,7 +2,7 @@
 					Tabbar
 ***************************************************************************/
 
-.ui-header.ui-bar-s.ui-title-tabbar-multiline .ui-tabbar {
+.ui-header.ui-title-tabbar-multiline .ui-tabbar {
 	height : 104 * @unit_base;
 	a.ui-btn {
 		height: 104 * @unit_base;
@@ -28,7 +28,7 @@
 	background: @color_tabbar_divider;
 	height: 1px;
 }
-.ui-header.ui-bar-s .ui-tabbar {
+.ui-header .ui-tabbar {
 	z-index : 1000;
 	height : 72 * @unit_base;
 
@@ -143,7 +143,7 @@
 		}
 	}
 }
-.ui-header.ui-bar-s.ui-title-tabbar {
+.ui-header.ui-title-tabbar {
 	height : 144 * @unit_base;
 	.ui-tabbar {
 		border-top: 1px solid B012L4;
