--- a/tau/src/css/profile/mobile/changeable/differences/jquery.mobile.theme.less
+++ b/tau/src/css/profile/mobile/changeable/differences/jquery.mobile.theme.less
@@ -1,7 +1,7 @@
 /****************************
  theme
 ****************************/
-.ui-footer.ui-bar-s {
+.ui-footer {
     [data-role="controlgroup"] {
         [data-role="button"] {
             border-left-width : 0px;
