--- a/tau/src/css/profile/mobile/default/common/jquery.mobile.forms.textinput.less
+++ b/tau/src/css/profile/mobile/default/common/jquery.mobile.forms.textinput.less
@@ -109,8 +109,8 @@ textarea.ui-input-text {
 }
 
 /* search bar */
-.ui-body-s > div > .ui-field-contain > .input-search-bar,
-.ui-body-s > .ui-field-contain > .input-search-bar {
+.ui-page > div > .ui-field-contain > .input-search-bar,
+.ui-page > .ui-field-contain > .input-search-bar {
 	margin : -48*@unit_base -15*@unit_base -32*@unit_base -15*@unit_base;
 } /* Need to confirm exact concept */
 
