--- a/tau/src/css/profile/mobile/default/common/jquery.mobile.tizen.tabbar.less
+++ b/tau/src/css/profile/mobile/default/common/jquery.mobile.tizen.tabbar.less
@@ -85,7 +85,7 @@
 }
 
 /* title font size when title tabbar */
-.ui-header.ui-bar-s.ui-title-tabbar {
+.ui-header.ui-title-tabbar {
 	.ui-title {
 		font-size : 22 * @unit_base;
 		margin-top : 8 * @unit_base;
@@ -119,7 +119,7 @@
 	}
 }
 
-.ui-header.ui-bar-s {
+.ui-header {
 	.ui-tabbar {
 		a.ui-btn {
 			border-bottom-width: 5 * @unit_base;
@@ -174,7 +174,7 @@
 }
 
 
-.ui-footer.ui-bar-s {
+.ui-footer {
 	.ui-tabbar {
 		height : 49 * @unit_base;
 
@@ -333,7 +333,7 @@
 }
 
 /* title font size when title tabbar */
-.ui-header.ui-bar-s.ui-title-tabbar {
+.ui-header.ui-title-tabbar {
 	.ui-title {
 		font-size : 19 * @unit_base;
 		margin-top : 8 * @unit_base;
@@ -356,7 +356,7 @@
 	}
 }
 
-.ui-header.ui-bar-s {
+.ui-header {
 	&.ui-title-tabbar-multiline {
 		.ui-tabbar {
 			a.ui-btn {
@@ -373,7 +373,7 @@
 	}
 }
 
-.ui-footer.ui-bar-s {
+.ui-footer {
 	.ui-tabbar {
 		height : 42 * @unit_base;
 
