--- a/tau/src/css/profile/mobile/default/differences/global.less
+++ b/tau/src/css/profile/mobile/default/differences/global.less
@@ -340,7 +340,7 @@ input::-webkit-input-placeholder {
 /****************************
  tizen.tabbar
 ****************************/
-.ui-header.ui-bar-s {
+.ui-header {
 	.ui-tabbar {
 		a.ui-btn.ui-btn-down-s {
 			border-bottom-color : @color_tabbar_btn_pressed;
@@ -364,7 +364,7 @@ input::-webkit-input-placeholder {
 	}
 }
 
-.ui-footer.ui-bar-s {
+.ui-footer {
 	.ui-tabbar {
 		.ui-btn-inner {
 			border-color : @color_bar_toolbar_divider;
